--- a/javaDocs/stylesheet.css
+++ b/javaDocs/stylesheet.css
@@ -100,13 +100,13 @@ Document title and Copyright styles
 */
 .clear {
     clear: both;
-    height: 0px;
+    height: 0;
     overflow: hidden;
 }
 
 .aboutLanguage {
     float: right;
-    padding: 0px 21px;
+    padding: 0 21px;
     font-size: 11px;
     z-index: 200;
     margin-top: -9px;
@@ -149,11 +149,10 @@ Navigation bar styles
     background-color: #4D7A97;
     color: #FFFFFF;
     float: left;
-    padding: 0;
     width: 100%;
     clear: right;
     height: 2.8em;
-    padding-top: 10px;
+    padding: 10px 0 0;
     overflow: hidden;
     font-size: 12px;
 }
@@ -163,11 +162,10 @@ Navigation bar styles
     background-color: #4D7A97;
     color: #FFFFFF;
     float: left;
-    padding: 0;
     width: 100%;
     clear: right;
     height: 2.8em;
-    padding-top: 10px;
+    padding: 10px 0 0;
     overflow: hidden;
     font-size: 12px;
 }
@@ -298,7 +296,7 @@ ul.blockList ul.blockList li.blockList h3 {
 }
 
 ul.blockList li.blockList h2 {
-    padding: 0px 0 20px 0;
+    padding: 0 0 20px 0;
 }
 
 /*
@@ -339,7 +337,7 @@ Page layout container styles
 }
 
 .contentContainer .description dl dd, .contentContainer .details dl dd, .serializedFormContainer dl dd {
-    margin: 5px 0 10px 0px;
+    margin: 5px 0 10px 0;
     font-size: 14px;
     font-family: 'DejaVu Sans Mono', monospace;
 }
@@ -393,7 +391,7 @@ ul.blockList li.blockList, ul.blockListLast li.blockList {
 }
 
 ul.blockList ul.blockList li.blockList, ul.blockList ul.blockListLast li.blockList {
-    padding: 0px 20px 5px 10px;
+    padding: 0 20px 5px 10px;
     border: 1px solid #ededed;
     background-color: #f8f8f8;
 }
@@ -433,7 +431,7 @@ Table styles
 }
 
 .overviewSummary, .memberSummary {
-    padding: 0px;
+    padding: 0;
 }
 
 .overviewSummary caption, .memberSummary caption, .typeSummary caption,
@@ -445,10 +443,8 @@ Table styles
     font-weight: bold;
     clear: none;
     overflow: hidden;
-    padding: 0px;
-    padding-top: 10px;
-    padding-left: 1px;
-    margin: 0px;
+    padding: 10px 0 0 1px;
+    margin: 0;
     white-space: pre;
 }
 
@@ -466,10 +462,7 @@ Table styles
 .overviewSummary caption span, .memberSummary caption span, .typeSummary caption span,
 .useSummary caption span, .constantsSummary caption span, .deprecatedSummary caption span {
     white-space: nowrap;
-    padding-top: 5px;
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-bottom: 7px;
+    padding: 5px 12px 7px;
     display: inline-block;
     float: left;
     background-color: #F8981D;
@@ -502,9 +495,9 @@ Table styles
 }
 
 .memberSummary caption span.tableTab, .memberSummary caption span.activeTableTab {
-    padding-top: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
     background-image: none;
     float: none;
     display: inline;
@@ -541,13 +534,13 @@ Table styles
 .overviewSummary td, .memberSummary td, .typeSummary td,
 .useSummary td, .constantsSummary td, .deprecatedSummary td {
     text-align: left;
-    padding: 0px 0px 12px 10px;
+    padding: 0 0 12px 10px;
 }
 
 th.colOne, th.colFirst, th.colLast, .useSummary th, .constantsSummary th,
 td.colOne, td.colFirst, td.colLast, .useSummary td, .constantsSummary td {
     vertical-align: top;
-    padding-right: 0px;
+    padding-right: 0;
     padding-top: 8px;
     padding-bottom: 3px;
 }
@@ -623,7 +616,7 @@ div.block {
 }
 
 td.colLast div {
-    padding-top: 0px;
+    padding-top: 0;
 }
 
 td.colLast a {
@@ -646,7 +639,7 @@ h1.hidden {
 
 .block {
     display: block;
-    margin: 3px 10px 2px 0px;
+    margin: 3px 10px 2px 0;
     color: #474747;
 }
 
@@ -666,5 +659,5 @@ div.block div.block span.interfaceName {
 }
 
 div.contentContainer ul.blockList li.blockList h2 {
-    padding-bottom: 0px;
+    padding-bottom: 0;
 }
