--- a/src/Views/ViewUsuarios.fxml
+++ b/src/Views/ViewUsuarios.fxml
@@ -59,7 +59,7 @@
         </Button>
         <Button fx:id="btnMainUsuarios" layoutX="10.0" layoutY="50.0" mnemonicParsing="false"
                 onAction="#goToViewUsuarios" prefHeight="50.0" prefWidth="274.0"
-                style="-fx-background-color: '#1E90FF';" text="Usuários" textFill="WHITE">
+                style="-fx-background-color: '#1E90d0';" text="Usuários" textFill="WHITE">
             <font>
                 <Font name="Segoe UI" size="22.0"/>
             </font>
