--- a/src/Views/ViewLivros.fxml
+++ b/src/Views/ViewLivros.fxml
@@ -50,7 +50,7 @@
     </GridPane>
     <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="210.0" style="-fx-background-color: '#1E90FF';">
         <Button mnemonicParsing="false" onAction="#goToViewLivros" prefHeight="50.0" prefWidth="208.0"
-                style="-fx-background-color: '#1E90FF';" text="Livros" textFill="WHITE">
+                style="-fx-background-color: '#1E90d0';" text="Livros" textFill="WHITE">
             <font>
                 <Font name="Segoe UI" size="22.0"/>
             </font>
